# python-project-83

./: .flake8  .gitignore  README.md  database.sql  makefile  pyproject.toml
page_analyzer/: app.py  db.py  normalize.py  parser.py
page_analyzer/templates/: index.html  layout.html  show.html  urls.html
